# marathon-gear

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: create_dependency_zip.sh
src/marathon_gear/: constants.py  email.py  email_template.j2  index.py  scrape.py  store_info.py
terraform/: .terraform.lock.hcl  docker.tf  dynamodb.tf  iam.tf  lambda.tf  lambda_dependency_layer.tf  main.tf  vars.tf  vars.tfvars.tmpl
